<resources>
    <string name="app_name">CalculatorRPN</string>
    <string name="texto">0</string>
    <string name="botoncero">0</string>
    <string name="botonpunto">·</string>
    <string name="botonigual">=</string>
    <string name="cot">cot</string>
    <string name="csc">csc</string>
    <string name="sec">sec</string>
    <string name="tan">tan</string>
    <string name="cos">Cos</string>
    <string name="sen">sen</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="menos">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
</resources>
