<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.alexandra.calculatorrpn.MainActivity">

    <TextView
        android:id="@+id/texto1"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:text="@string/texto"
        android:textSize="40sp"
        android:gravity="right"
        android:background="#fff"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_punto"
        android:text="@string/botonpunto"
        android:textSize="31sp"
        android:layout_width="78dp"
        android:background="#434446"
        android:textColor="#0073ff"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button_cero"
        android:text="@string/botoncero"
        android:background="#434446"
        android:textColor="#0073ff"
        android:textSize="21sp"
        android:height="40dp"
        android:layout_marginLeft="1dp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_punto"
        android:layout_toEndOf="@+id/button_punto" />
    <Button
        android:id="@+id/button_igual"
        android:text="@string/botonigual"
        android:textSize="21sp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:background="#434446"
        android:layout_marginLeft="1dp"
        android:textColor="#0073ff"
        android:layout_alignBottom="@+id/button_cero"
        android:layout_toRightOf="@+id/button_cero"
        android:layout_toEndOf="@+id/button_cero"
        android:layout_alignTop="@+id/button_cero" />
    <Button
        android:id="@+id/button_mas"
        android:text="+"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_marginLeft="1dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_igual"
        android:layout_toEndOf="@+id/button_igual" />
    <Button
        android:id="@+id/button_uno"
        android:text="@string/_1"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_punto"
        android:layout_alignLeft="@+id/button_punto"
        android:layout_alignStart="@+id/button_punto" />
    <Button
        android:id="@+id/button_dos"
        android:text="@string/_2"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_marginBottom="1dp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_cero"
        android:layout_alignLeft="@+id/button_cero"
        android:layout_alignStart="@+id/button_cero" />
    <Button
        android:id="@+id/button_tres"
        android:text="@string/_3"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_marginBottom="1dp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_dos"
        android:layout_alignBottom="@+id/button_dos"
        android:layout_alignLeft="@+id/button_igual"
        android:layout_alignStart="@+id/button_igual" />
    <Button
        android:id="@+id/button_menos"
        android:text="@string/menos"
        android:background="#434446"
        android:textSize="35sp"
        android:textColor="#0073ff"
        android:layout_marginBottom="1dp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_mas"
        android:layout_alignLeft="@+id/button_mas"
        android:layout_alignStart="@+id/button_mas" />
    <Button
        android:id="@+id/button_cuatro"
        android:text="@string/_4"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_marginBottom="1dp"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_uno"
        android:layout_alignLeft="@+id/button_uno"
        android:layout_alignStart="@+id/button_uno" />
    <Button
        android:id="@+id/button_cinco"
        android:text="@string/_5"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_alignBaseline="@+id/button_cuatro"
        android:layout_alignBottom="@+id/button_cuatro"
        android:layout_toRightOf="@+id/button_cuatro"
        android:layout_toEndOf="@+id/button_cuatro" />
    <Button
        android:id="@+id/button_seis"
        android:text="@string/_6"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_alignBaseline="@+id/button_cinco"
        android:layout_alignBottom="@+id/button_cinco"
        android:layout_toRightOf="@+id/button_dos"
        android:layout_toEndOf="@+id/button_dos"
        android:layout_above="@+id/button_dos" />
    <Button
        android:id="@+id/button_multiplica"
        android:text="@string/x"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1.5dp"
        android:layout_alignBaseline="@+id/button_seis"
        android:layout_alignBottom="@+id/button_seis"
        android:layout_toRightOf="@+id/button_tres"
        android:layout_toEndOf="@+id/button_tres" />
    <Button
        android:id="@+id/button_siete"
        android:text="@string/_7"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_cuatro"
        android:layout_alignLeft="@+id/button_cuatro"
        android:layout_alignStart="@+id/button_cuatro" />
    <Button
        android:id="@+id/button_ocho"
        android:text="@string/_8"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_marginLeft="1dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_siete"
        android:layout_alignBottom="@+id/button_siete"
        android:layout_toRightOf="@+id/button_siete"
        android:layout_toEndOf="@+id/button_siete" />
    <Button
        android:id="@+id/button_nueve"
        android:text="@string/_9"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_cinco"
        android:layout_toRightOf="@+id/button_cinco"
        android:layout_toEndOf="@+id/button_cinco" />
    <Button
        android:id="@+id/button_divide"
        android:text="@string/divide"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#0073ff"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_multiplica"
        android:layout_alignLeft="@+id/button_multiplica"
        android:layout_alignStart="@+id/button_multiplica" />
    <Button
        android:id="@+id/button_sen"
        android:text="@string/sen"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#fff"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_siete"
        android:layout_alignLeft="@+id/button_siete"
        android:layout_alignStart="@+id/button_siete" />
    <Button
        android:id="@+id/button_cos"
        android:text="@string/cos"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#fff"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_sen"
        android:layout_alignLeft="@+id/button_sen"
        android:layout_alignStart="@+id/button_sen" />
    <Button
        android:id="@+id/button_tan"
        android:text="@string/tan"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#ffffff"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_alignBaseline="@+id/button_sec"
        android:layout_alignBottom="@+id/button_sec"
        android:layout_toRightOf="@+id/button_sec"
        android:layout_toEndOf="@+id/button_sec" />
    <Button
        android:id="@+id/button_sec"
        android:text="@string/sec"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#ffffff"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_above="@+id/button_siete"
        android:layout_toRightOf="@+id/button_sen"
        android:layout_toEndOf="@+id/button_sen" />

    <Button
        android:id="@+id/button_csc"
        android:text="@string/csc"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#ffffff"
        android:layout_width="52dp"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_tan"
        android:layout_alignLeft="@+id/button_sec"
        android:layout_alignStart="@+id/button_sec" />
    <Button
        android:id="@+id/button_cot"
        android:text="@string/cot"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#ffffff"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_csc"
        android:layout_alignBottom="@+id/button_csc"
        android:layout_alignLeft="@+id/button_tan"
        android:layout_alignStart="@+id/button_tan" />
    <Button
        android:id="@+id/button_historial"
        android:text="historial"
        android:background="#434446"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="1dp"
        android:layout_above="@+id/button_nueve"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/button_parentesis"
        android:text="(  )"
        android:background="#434446"
        android:textSize="21sp"
        android:textColor="#ffffff"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/button_historial"
        android:layout_alignLeft="@+id/button_historial"
        android:layout_alignStart="@+id/button_historial" />

    <Button
        android:id="@+id/button_borrar"
        android:layout_width="104dp"

        android:layout_height="wrap_content"
        android:layout_above="@+id/button_historial"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_toEndOf="@+id/button_parentesis"
        android:layout_toRightOf="@+id/button_parentesis"
        android:background="#454446"
        android:text="C"
        android:textColor="#0073ff"
        android:textSize="31sp" />



</RelativeLayout>
